update-manager (1:0.91.3) intrepid; urgency=low

  * DistUpgrade/mirrors.cfg:
    - remove ftp.caliu.info (LP: #231966)

 --

update-manager (1:0.91.2) intrepid; urgency=low

  [ Brian Murray ]
  * String fix for "a unresolvable problem" (LP: #196269)
  * String fix for "A upgrade to" (LP: #196229)
  * String fix for "is in a inconsistent state" (LP: #197015)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 May 2008 17:19:29 +0200

update-manager (1:0.91.1) intrepid; urgency=low

  * debian/control:
    - add missing python-vte dependency to update-manager-hildon

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 May 2008 11:47:18 +0200

update-manager (1:0.91) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix bug in withNetwork value propergation (LP: #227197)
  * DistUpgrade/DistUpgradeController.py:
    - fix bug with sources.list rewriting when mixed
      deb http://unknown-miror\ndeb-src http://known-mirror 
      entries are used (#221730)
  * UpdateManager/Common/utils.py:
    - fix inhibit path (LP: #140754), thanks to 
      Andreas Dalsgaard
  * DistUpgrade/DistUpgradeViewText.py:
    - use sensible-pager first and fallback to "more" if
      that is not available (thanks to Mithrandir)
  * DistUpgradeView{Gtk,KDE,Text}.py:
    - only overwrite the DEBIAN_FRONTEND if it is not set
      already (thanks to Guy Sheffer)
  * UpdateManagerHildon/UpdateManagerHildon.py:
    - add hildon support (thanks to Tollef Fog Heen and
      Emmet Hikory)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 May 2008 18:01:07 +0200

update-manager (1:0.90.0) intrepid; urgency=low

  * merged branches:
    - ~alefteris/update-manager/alefteris (thanks!)
  * UpdateManager/Core/DistUpgradeFetcherCore.py:
    - do not crash if the tarfile can not be read (LP: #203504)
  * fix a bunch of spelling mistakes (LP: #213040), thanks
    to Peter Cordes
  * AutoUpgradeTester/automatic-upgrade-testing: