@@ -65,6 +65,21 @@
         </long>
       </locale>
     </schema>
+    <schema>
+      <key>/schemas/apps/update-manager/autoclose_install_window</key>
+      <applyto>/apps/update-manager/autoclose_install_window</applyto>
+      <owner>update-manager</owner>
+      <type>bool</type>
+      <default>True</default>
+		
+      <locale name="C">
+        <short>Auto close the install window after successful install</short>
+        <long>
+	  If this key is set the install window will be automatically
+          closed on successful installation.
+        </long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
 
