@@ -2,8 +2,12 @@ update-manager (1:0.91.3) intrepid; urgency=low
 
   * DistUpgrade/mirrors.cfg:
     - remove ftp.caliu.info (LP: #231966)
+  * UpdateManager/UpdateManager.py, data/update-manager.schemas.in:
+    - provide a gconf key /apps/update-manager/autoclose_install_window
+      to make it possible to prevent automatic closing of the installation
+      window (LP: #183209)
 
- --
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 03 Jun 2008 12:25:11 +0200
 
 update-manager (1:0.91.2) intrepid; urgency=low
 
